Make changes in hyprland

--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -3,26 +3,24 @@
 ##############################
 
 general {
-    lock_cmd = omarchy-lock-screen
+    lock_cmd = pidof hyprlock || hyprlock
     before_sleep_cmd = loginctl lock-session
-    after_sleep_cmd = hyprctl dispatch dpms on
+    after_sleep_cmd = hyprctl dispatch dpms on && systemctl --user restart hyprsunset.service
+}
+
+
+listener {
+    timeout = 300
+    on-timeout = loginctl lock-session
 }
 
 listener {
-    timeout = 420
-    on-timeout = pidof hyprlock || omarchy-launch-screensaver
-}
-
-listener {
-    timeout = 720
+    timeout = 360
     on-timeout = hyprctl dispatch dpms off
-    on-resume = hyprctl dispatch dpms on && brightnessctl -r
+    on-resume = hyprctl dispatch dpms on && systemctl --user restart hyprsunset.service
 }
 
-# Suspend only after lock has completed
 listener {
     timeout = 900
-    on-timeout = loginctl lock-session && (sleep 2) && systemctl suspend
+    on-timeout = systemctl suspend
 }
-
-
