--- a/opencode/opencode.jsonc
+++ b/opencode/opencode.jsonc
@@ -1,9 +1,6 @@
 {
   "$schema": "https://opencode.ai/config.json",
-  "plugin": [
-    "opencode-antigravity-auth@1.2.7",
-    "@tarquinen/opencode-dcp@1.1.2",
-  ],
+  "plugin": ["opencode-antigravity-auth@beta", "@tarquinen/opencode-dcp@1.1.2"],
 
   "mcp": {
     "playwright": {
