--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -13,6 +13,6 @@ bindd = SUPER, R, Voxtype Start(press), exec, voxtype record start
 binddr = SUPER, R, Voxtype Stop(release), exec, voxtype record stop
 
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
-# unbind = SUPER, SPACE
+unbind = SUPER CTRL, X
 # bindd = SUPER, SPACE, Omarchy menu, exec, omarchy-menu
 # 
