--- a/opencode/opencode.jsonc
+++ b/opencode/opencode.jsonc
@@ -1,6 +1,7 @@
 {
   "$schema": "https://opencode.ai/config.json",
   "plugin": ["opencode-antigravity-auth@beta", "@tarquinen/opencode-dcp@1.1.2"],
+  "theme": "tokyonight",
 
   "mcp": {
     "playwright": {
