--- a/opencode/opencode.jsonc
+++ b/opencode/opencode.jsonc
@@ -1,10 +1,6 @@
 {
   "$schema": "https://opencode.ai/config.json",
-  "plugin": [
-    "oh-my-opencode",
-    "opencode-antigravity-auth@beta",
-    "@tarquinen/opencode-dcp@1.1.2",
-  ],
+  "plugin": ["opencode-antigravity-auth@beta"],
   "theme": "tokyonight",
 
   "mcp": {
