--- a/opencode/opencode.jsonc
+++ b/opencode/opencode.jsonc
@@ -15,6 +15,20 @@
       "environment": {
         "MINIMAX_API_HOST": "https://api.minimax.io",
       },
+      "enabled": true,
+    },
+    "context7": {
+      "type": "remote",
+      "url": "https://mcp.context7.com/mcp",
+      "headers": {
+        "CONTEXT7_API_KEY": "{env:CONTEXT7_API_KEY}",
+      },
+      "enabled": true,
+    },
+    "gh_grep": {
+      "type": "remote",
+      "url": "https://mcp.grep.app",
+      "enabled": true,
     },
   },
   "provider": {
