--- a/opencode/opencode.jsonc
+++ b/opencode/opencode.jsonc
@@ -2,6 +2,7 @@
   "$schema": "https://opencode.ai/config.json",
   "plugin": ["opencode-antigravity-auth@beta"],
   "theme": "tokyonight",
+  "model": "minimax/MiniMax-M2.1",
 
   "mcp": {
     "playwright": {
@@ -40,6 +41,10 @@
       "type": "local",
       "command": ["npx", "-y", "@jinzcdev/leetcode-mcp-server"],
       "enabled": false,
+      "environment": {
+        "LEETCODE_SITE": "global",
+        "LEETCODE_SESSION": "{env:LEETCODE_SESSION}",
+      },
     },
   },
   "provider": {
